--- a/html/style.css
+++ b/html/style.css
@@ -399,7 +399,7 @@ h6 {
     background-size: 100% 100%;
 }
 
-.item {
+.item1, .item2 {
     display: flex;
     justify-content: center;
     padding: 3px 3px !important;
@@ -413,8 +413,8 @@ h6 {
 	height:46px !important;
 }
 
-.item:hover{
-    background-image: url('img/toastred.png');
+.item2:hover{
+    background-image: url('img/borderinput.png');
     background-size: 100% 100%;
 }
 
@@ -467,7 +467,7 @@ h6 {
 }
 
 .btn-small:hover {
-    background: url('img/buttong.png');
+    background: url('img/borderinput.png');
     background-size: 80% 100%;
     background-repeat: no-repeat;
     background-position: center;
@@ -525,27 +525,6 @@ textarea.materialize-textarea {
     transition: box-shadow .3s, border .3s;
     transition: box-shadow .3s, border .3s, -webkit-box-shadow .3s;
 }
-
-
-/*
-.slider-range input[type='range']::-webkit-slider-thumb {
-    border: 0px solid #000000;
-    height: 1.35vw;
-    width: 10px;
-    border-radius: 4px;
-    background: rgba(45, 146, 235, 0.6);
-    cursor: pointer;
-    transition: all 0.7s;
-  }
-  .slider-range  input[type='range']::-webkit-slider-thumb:hover{
-    background-color: rgba(254,138,15,0.9);                 
-  }
-  .slider-range  input[type=range]::-webkit-slider-runnable-track:hover {                
-    background: linear-gradient(to right, rgba(127, 180, 227,0.3) , rgba(254,138,15,0.3)); 
-    user-select: none;
-    border-radius: 5px 0px 0px 5px;                
-    background-size: 200%;                  
-  } */
 
 input[type=range] {
     -webkit-appearance: none;
@@ -631,34 +610,6 @@ input[type=range]::-ms-thumb {
 ul:not(.browser-default)>li {
     list-style-type: none;
 }
-
-
-/* .slidecontainer {
-    width: 50%;
-    margin: 0px 5px;
-}
-
-.slider {
-    -webkit-appearance: none !important;
-    width: 100% !important;
-    background: #414141 !important;
-    background-color: #414141 !important;
-    outline: none !important;
-    opacity: 0.7 !important;
-    -webkit-transition: opacity .15s ease-in-out !important;
-    transition: opacity .15s ease-in-out;
-    height: 40px !important;
-    border: 0px !important;
-}
-
-input[type="range" i] {
-    color: #414141 !important;
-}
-
-.slider:hover {
-    opacity: 1;
-}
- */
 
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
