--- a/html/style.css
+++ b/html/style.css
@@ -271,7 +271,7 @@ button {
 }
 
 h6 {
-    color: #e7e7e7;
+    color: #f0f0f0;
     font-weight: 400 !important;
     font-family: 'robotoslab';
 }
@@ -284,6 +284,7 @@ h6 {
     background-position: left center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
+    margin: auto  !important;
 }
 
 .input-ranger {
@@ -297,6 +298,20 @@ h6 {
     width: calc(100% - 20px) !important;
     background-color: transparent;
     overflow: hidden;
+}
+
+.panel-cust {
+    background: url('img/input.png');
+    background-size: 100% 100%;
+    padding: 0px !important;
+    margin: 3px 10px !important;
+    border-radius: 0px;
+    width: calc(100% - 20px) !important;
+    background-color: transparent;
+    overflow: hidden;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
 }
 
 .title {
@@ -313,9 +328,21 @@ h6 {
 }
 
 .grey-text {
-    margin: auto;    
+    margin: auto;
     /* margin-top:4px;
     margin-bottom:5px; */
+}
+
+.grey-text.title {
+    color: #9e9e9e;
+}
+
+.grey-text.title:hover {
+    color: #f0f0f0;
+}
+
+.grey-text.title-cust {
+    color: #9e9e9e;
 }
 
 .panel-title .grey-text {
@@ -406,17 +433,6 @@ h6 {
     padding: 3px 3px !important;
 }
 
-.item2 {
-    display: flex;
-    justify-content: center;
-    padding: 3px 3px !important;
-}
-
-.item2:hover{
-    background-image: url('img/borderinput.png');
-    background-size: 100% 100%;
-}
-
 .button-left{
 	height:46px !important;
 }
@@ -471,7 +487,7 @@ h6 {
 }
 
 .btn:hover {
-    background: url('img/buttong.png');
+    background: url('img/buttonv.png');
     background-size: 100% 100%;
 }
 
@@ -715,7 +731,7 @@ input[type='number'] {
     -webkit-transition: all .33s;
     -o-transition: all .33s;
     transition: all .33s;
-    color: white;
+    color: #f0f0f0;
     background-color: transparent;
     background-image: url('img/inputb.png');
     background-position: left center;
@@ -725,12 +741,12 @@ input[type='number'] {
 
 input[type='text']:focus,
 input[type='number']:focus {
-    color: #ca0000;
+    color: #f0f0f0;
 }
 
 input[type='text']:hover,
 input[type='number']:hover {
-    color: #ca0000;
+    color: #f0f0f0;
 }
 
 input[type='text']::-webkit-input-placeholder,
