--- a/html/style.css
+++ b/html/style.css
@@ -40,6 +40,10 @@ div {
     border-radius: 5px;
 }
 
+input {
+    border: 0 !important;
+}
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
     -webkit-appearance: none;
@@ -47,51 +51,52 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 0;
 }
 
-input[type=number] {
-    /* border: 0 !important; */
+input[type='number']::-webkit-input-placeholder {
+    color: #a0a0a0;
+}
+
+input[type='number']:-webkit-autofill {
+    color: black !important;
+    background-color: transparent !important;
+}
+
+input[type='number'] {
+    font-family: 'robotoslab';
+    padding: 9px 25px;
     -webkit-appearance: none;
     -moz-appearance: none;
+    -webkit-transition: all .33s;
+    -o-transition: all .33s;
+    transition: all .33s;
     box-shadow: none !important;
+    color: #f0f0f0;
+    background-color: transparent;
+    background-image: url('img/inputb.png');
+    background-position: left center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+}
+
+input[type='number']:focus {
+    color: #f0f0f0;
+}
+
+input[type='number']:hover {
+    color: #f0f0f0;
 }
 
 input[type=number]:active {
     border-bottom-color: rgba(45, 146, 235, 0.9) !important;
 }
 
-button {
-    background-color: transparent;
-    color: #e7e7e7;
-}
-
-.menu-button {
-    border: 0px #fff solid;
-    background: none;
-    width: 100%;
-    padding: 1vw 1vw;
-    font-size: 1vw;
-}
-
-.menu-button:hover {
-    background: url('img/buttonv.png');
+.input-number {
+    text-align: center;
+    font-family: 'crock' !important;
+    background-image: url('img/input.png') !important;
+    background-position: left center;
+    background-repeat: no-repeat;
     background-size: 100% 100%;
-}
-.buy-buttons {
-    display:flex ;
-
-}
-.spacing2 {
-    margin-bottom: 20px;
-}
-
-.spacing10 {
-    margin-bottom: 100px;
-}
-
-.border-top {
-    width: 100%;
-    height: 1px;
-    background-color: rgba(255, 255, 255, 0.4);
-    text-align: right;
+    margin: auto  !important;
 }
 
 #head {
@@ -100,14 +105,6 @@ button {
     border-radius: 2px;
     overflow: hidden;
     transition: all 0.5s;
-}
-
-.line {
-    background: rgba(255, 255, 255, 0.3);
-    height: 1px;
-    width: 90%;
-    margin-top: 3px;
-    margin-bottom: 3px;
 }
 
 .header-text {
@@ -123,80 +120,7 @@ button {
     background-size: 100% 100%;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 2px;
-    padding: 20px 10px;
-    padding: 2vw 1vw;
-    color: white;
-    max-height: 70%;
-    width: 55%;
-    margin: auto;
-    overflow-y: auto;
-    border-radius: 2px;
-    will-change: top, opacity;
-}
-
-.green {
-    background: rgba(0, 247, 132, 0.2)!important;
-}
-
-.green:hover {
-    background: rgba(0, 247, 132, 0.4)!important;
-    -webkit-box-shadow: 0px 0px 3px 1px rgb(0, 247, 132);
-    -moz-box-shadow: 0px 0px 3px 1px rgb(0, 247, 132);
-    box-shadow: 0px 0px 3px 1px rgb(0, 247, 132);
-}
-
-.red {
-    background: rgba(240, 38, 38, 0.2)!important;
-}
-
-.red:hover {
-    background: rgba(240, 38, 38, 0.4)!important;
-    -webkit-box-shadow: 0px 0px 3px 1px rgb(240, 38, 38);
-    -moz-box-shadow: 0px 0px 3px 1px rgb(240, 38, 38);
-    box-shadow: 0px 0px 3px 1px rgb(240, 38, 38);
-}
-
-.grey {
-    background: rgba(138, 138, 138, 0.2)!important;
-}
-
-.grey:hover {
-    background: rgba(138, 138, 138, 0.4)!important;
-    -webkit-box-shadow: 0px 0px 3px 1px rgb(138, 138, 138);
-    -moz-box-shadow: 0px 0px 3px 1px rgb(138, 138, 138);
-    box-shadow: 0px 0px 3px 1px rgb(138, 138, 138);
-}
-
-.modal-close {
-    border-radius: 5px;
-}
-
-.modal-content {}
-
-.modal-content h4 {
-    padding: 0;
-    font-size: 1.8vw;
-    line-height: 0.2vw;
-    font-weight: 400;
-}
-
-.modal-content p {
-    padding: 0;
-    font-size: 0.8vw;
-    line-height: 0.5vw;
-}
-
-#clothes-container,
-#creator-container,
-#barber-container,
-#tats-container {
+#creator-container {
     padding-bottom: 40px;
     border-radius: 2px;
     overflow: hidden;
@@ -219,71 +143,10 @@ button {
     width: 100%;
 }
 
-#camera-container {
-    /* width: 500px; */
-    height: 110%;
-    /* margin: auto; */
-    position: relative;
-    top: -10%;
-    left: 40%;
-    background-color: #313131;
-    border-radius: 0px;
-    transform: scale(0.75);
-}
-
-#button_menu {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    border-radius: 0px;
-    padding: 0px 20px;
-    height: 5vh;
-    background: url('img/input.png');
-    background-position: center;
-    background-size: 95% 100%;
-}
-
-.menu-selectb {
-    flex-grow: 1;
-    border-radius: 0px;
-    height: 5vh;
-    border: 0px #fff solid;
-    font-family: 'robotoslab';
-    font-weight: 500;
-    letter-spacing: 1.5px;
-    color: #f0f0f0;
-    background: transparent;
-}
-
-.menu-selectb:hover {
-    background: url('img/buttonv.png');
-    background-size: 100% 100%;
-}
-
-.menu-selectb.active {
-    background: url('img/buttonv.png');
-    background-size: 100% 100%;
-}
-
 h6 {
     color: #f0f0f0;
     font-weight: 400 !important;
     font-family: 'robotoslab';
-}
-
-.input-number,
-.input-text {
-    text-align: center;
-    font-family: 'crock' !important;
-    background-image: url('img/input.png') !important;
-    background-position: left center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    margin: auto  !important;
-}
-
-.input-ranger {
-    width: 100% !important;
 }
 
 .panel {
@@ -293,6 +156,8 @@ h6 {
     width: calc(100% - 20px) !important;
     background-color: transparent;
     overflow: hidden;
+    background: url('img/input.png');
+    background-size: 100% 100%;
 }
 
 .panel-cust {
@@ -352,33 +217,6 @@ h6 {
     margin-bottom: 5px;
 }
 
-.panel-label {
-    margin: 5px !important;
-}
-
-.panel-bottom {
-    border-top: 1px rgba(255, 255, 255, 0.2) solid;
-    background-color: rgba(0, 0, 0, 0.1);
-    padding: 10px !important;
-}
-
-.color_palette {
-    border-radius: 2px;
-    border: 2px solid #e7e7e762;
-    margin: 4px;
-    width: 40px;
-    height: 40px;
-    display: inline-flex;
-}
-
-.color_palette:hover {
-    border: 2px solid #4a92ff !important;
-}
-
-.color_palette.active {
-    border: 2px solid #4a92ff !important;
-}
-
 .row .col.s12 {
     width: 100%;
     margin-left: auto;
@@ -408,12 +246,6 @@ h6 {
     right: auto;
 }
 
-#clothes,
-#creator {
-    overflow: hidden;
-    margin-bottom: 10px;
-}
-
 .item-bg {
     background: url('img/toast_bg.png');
     width: 90% !important;
@@ -421,7 +253,6 @@ h6 {
     justify-content: center;
     padding: 3px 3px !important;
 }
-
 
 .selected{
     background-image: url('img/toastred.png');
@@ -434,6 +265,33 @@ h6 {
     padding: 3px 3px !important;
 }
 
+button {
+    outline: none !important;
+    background-color: transparent !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #e7e7e7;
+}
+
+.menu-button {
+    border: 0px #fff solid;
+    background: none;
+    width: 100%;
+    padding: 1vw 1vw;
+    font-size: 1vw;
+}
+
+.menu-button:hover {
+    background: url('img/buttonv.png');
+    background-size: 100% 100%;
+}
+
+.buy-buttons {
+    display:flex ;
+}
+
 .button-left{
 	height:46px !important;
 }
@@ -442,31 +300,42 @@ h6 {
 	height:46px !important;
 }
 
-.waves-effect {
-    position: relative;
-    cursor: pointer;
-    display: inline-block;
-    overflow: hidden;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-tap-highlight-color: transparent;
-    vertical-align: middle;
-    z-index: 1;
-    -webkit-transition: .3s ease-out;
-    transition: .3s ease-out;
+#button_menu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 0px;
+    padding: 0px 20px;
+    height: 5vh;
+    background: url('img/input.png');
+    background-position: center;
+    background-size: 95% 100%;
 }
 
-.waves-light {
-    padding: 15px 10px!important;
+.menu-selectb {
+    flex-grow: 1;
+    border-radius: 0px;
+    height: 5vh;
+    border: 0px #fff solid;
+    font-family: 'robotoslab';
+    font-weight: 500;
+    letter-spacing: 1.5px;
+    color: #f0f0f0;
+    background: transparent;
+}
+
+.menu-selectb:hover {
+    background: url('img/buttonv.png');
+    background-size: 100% 100%;
+}
+
+.menu-selectb.active {
+    background: url('img/buttonv.png');
+    background-size: 100% 100%;
 }
 
 .btn,
-.btn-large,
-.btn-small,
-.btn-small-cash,
-.btn-small-gold{
+.btn-small {
     display:flex !important;
     flex-direction: row !important;
     justify-content: center;
@@ -527,106 +396,6 @@ h6 {
     background-size: 100% 100% !important;
 }
 
-input:not([type]),
-input[type=text]:not(.browser-default),
-input[type=password]:not(.browser-default),
-input[type=email]:not(.browser-default),
-input[type=url]:not(.browser-default),
-input[type=time]:not(.browser-default),
-input[type=date]:not(.browser-default),
-input[type=datetime]:not(.browser-default),
-input[type=datetime-local]:not(.browser-default),
-input[type=tel]:not(.browser-default),
-input[type=number]:not(.browser-default),
-input[type=search]:not(.browser-default),
-textarea.materialize-textarea {
-    background-color: transparent;
-    border: none;
-    /*  border-bottom: 1px solid #9e9e9e; */
-    border-radius: 0;
-    outline: none;
-    height: 3rem;
-    width: 100%;
-    font-size: 16px;
-    padding: 0;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
-    -webkit-transition: border .3s, -webkit-box-shadow .3s;
-    transition: border .3s, -webkit-box-shadow .3s;
-    transition: box-shadow .3s, border .3s;
-    transition: box-shadow .3s, border .3s, -webkit-box-shadow .3s;
-}
-
-input[type=range] {
-    -webkit-appearance: none;
-    margin: 0.7px 0;
-}
-
-input[type=range]:focus {
-    outline: none;
-}
-
-input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 25.6px;
-    cursor: pointer;
-    background: transparent !important;
-    background-image: url('img/toast_bg.png') !important;
-    background-color: transparent;
-    background-size: 100% 100%;
-    border-radius: 0px;
-    border: 0px solid #010101;
-}
-
-input[type=range]::-webkit-slider-thumb {
-    box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
-    border: 0px solid #ff1e00;
-    height: 27px;
-    width: 18px;
-    background: transparent;
-    background-image: url('img/buttonv.png');
-    background-size: 100% 100%;
-    cursor: pointer;
-    -webkit-appearance: none;
-    margin-top: -0.7px;
-}
-
-input[type=range]::-ms-track {
-    width: 100%;
-    height: 25.6px;
-    cursor: pointer;
-    background: transparent;
-    border-color: transparent;
-    color: transparent;
-}
-
-input[type=range]::-ms-fill-lower {
-    background: #3c4040;
-    border: 0px solid #010101;
-    border-radius: 0px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-
-input[type=range]::-ms-fill-upper {
-    background: #484d4d;
-    border: 0px solid #010101;
-    border-radius: 0px;
-    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-}
-
-input[type=range]::-ms-thumb {
-    box-shadow: 0px 0px 1px #670000, 0px 0px 0px #810000;
-    border: 0px solid #ff1e00;
-    height: 27px;
-    width: 18px;
-    border-radius: 0px;
-    background: rgba(210, 0, 0, 0.93);
-    cursor: pointer;
-    height: 25.6px;
-}
-
 .collapsible-header {
     display: -webkit-box;
     display: -webkit-flex;
@@ -637,136 +406,6 @@ input[type=range]::-ms-thumb {
     padding: 1rem;
     background-color: transparent !important;
     border: 0 !important;
-}
-
-ul:not(.browser-default)>li {
-    list-style-type: none;
-}
-
-input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    background: #4182e2 !important;
-    cursor: pointer;
-    border-radius: 2px !important;
-}
-
-input[type='radio'] {
-    display: none;
-}
-
-input[type='radio']+label {
-    font-size: 20px;
-    position: relative;
-    display: inline-flex;
-    padding-left: 30px;
-    cursor: pointer;
-    -webkit-transition: all .33s;
-    -o-transition: all .33s;
-    transition: all .33s;
-}
-
-input[type='radio']+label:hover {
-    color: #ef4343;
-}
-
-input[type='radio']+label::before,
-input[type='radio']+label::after {
-    position: absolute;
-    display: block;
-    content: '';
-    -webkit-transition: all .33s;
-    -o-transition: all .33s;
-    transition: all .33s;
-}
-
-input[type='radio']+label::before {
-    width: 24px;
-    height: 24px;
-    background: url('img/buttonb.png');
-    background-size: 100% 100%;
-}
-
-input[type='radio']+label::after {
-    width: 24px;
-    height: 24px;
-}
-
-input[type='radio']:checked+label::before {
-    background: url('img/buttonv.png');
-    background-size: 100% 100%;
-}
-
-input[type='radio']:checked+label::after {
-    background-image: url('img/x.png');
-    background-size: 24px 24px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.disabled {
-    opacity: 0.2;
-    pointer-events: none;
-}
-
-.form-check {
-    margin-top: 10px;
-    width: 24px;
-    height: 24px;
-    margin-right: 5px;
-}
-
-.namespan {
-    margin-left: 30px;
-}
-
-input {
-    border: 0 !important;
-}
-
-input[type='text'],
-input[type='number'] {
-    font-family: 'robotoslab';
-    padding: 9px 25px;
-    -webkit-transition: all .33s;
-    -o-transition: all .33s;
-    transition: all .33s;
-    color: #f0f0f0;
-    background-color: transparent;
-    background-image: url('img/inputb.png');
-    background-position: left center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-
-input[type='text']:focus,
-input[type='number']:focus {
-    color: #f0f0f0;
-}
-
-input[type='text']:hover,
-input[type='number']:hover {
-    color: #f0f0f0;
-}
-
-input[type='text']::-webkit-input-placeholder,
-input[type='number']::-webkit-input-placeholder {
-    color: #a0a0a0;
-}
-
-input[type='text']:-webkit-autofill,
-input[type='number']:-webkit-autofill {
-    color: black !important;
-    background-color: transparent !important;
-}
-
-button {
-    outline: none !important;
-    background-color: transparent !important;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .collapsible-body {
@@ -781,4 +420,13 @@ button {
     display:flex;
     flex-direction: column;
     align-items: center;
+}
+
+ul:not(.browser-default)>li {
+    list-style-type: none;
+}
+
+.disabled {
+    opacity: 0.2;
+    pointer-events: none;
 }
