--- a/html/style.css
+++ b/html/style.css
@@ -274,11 +274,6 @@ button {
     font-size: 1.0em;
 }
 
-.selected{
-    background-image: url('img/toastred.png');
-    background-size: 100% 100%;
-}
-
 .item {
     display: flex;
     justify-content: left;
@@ -355,10 +350,14 @@ button {
 
 .btn-small:hover {
     background: url('img/buttonv.png');
-    background-size: 80% 100%;
+    background-size: 90% 100%;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right;
     border-radius: 10px;
+}
+
+.btn-small.right-btn {
+    margin-right: 5px;
 }
 
 .buttons{
@@ -400,6 +399,10 @@ h6 {
     margin-bottom:5px; */
 }
 
+.grey-text.plus:hover {
+    color: #f0f0f0;
+}
+
 .grey-text-shop.title {
     color: #9e9e9e;
     text-align: left;
@@ -424,6 +427,13 @@ h6 {
     text-align: center;
     margin: auto;
     font-size: 1em;
+    font-weight: 400;
+}
+
+.white-text {
+    color: #f0f0f0;
+    text-align: center;
+    margin: auto;
     font-weight: 400;
 }
 
@@ -495,6 +505,15 @@ input[type=number]:active {
     margin: auto  !important;
 }
 
+.col.s12.panel-myhorse.item {
+    width: calc(100% - 60px) !important;
+    background-image: url('img/input.png'), url('img/input.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: auto;
+}
+
 .col.s6.panel-col.item-cust {
     display: flex;
     justify-content: left;
@@ -503,6 +522,24 @@ input[type=number]:active {
     margin-left: auto;
     left: auto;
     right: auto;
+}
+
+.col.s6.panel-col.item-myhorse {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 3px !important;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+}
+
+.col.s6.panel-col.item-myhorse:hover {
+    background: url('img/buttonv.png');
+    background-size: 80% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    border-radius: 0px;
 }
 
 .col.s4.panel-col.item-count {
@@ -517,4 +554,9 @@ input[type=number]:active {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: auto  !important;
+}
+
+.selected{
+    background-image: url('img/selected.png'), url('img/selection_box.png') !important;
+    background-size: 100% 100%;
 }
