--- a/html/style.css
+++ b/html/style.css
@@ -111,7 +111,8 @@ button {
     color: #f0f0f0;
 }
 
-.divider-menu {
+.divider-menu-top,
+.divider-menu-bottom {
 	width: 90%;
 	height: 4px;
 	margin: auto auto;
@@ -122,15 +123,12 @@ button {
 	opacity: 0.6;
 }
 
-.divider-menu-ext {
-	width: 90%;
-	height: 4px;
-	margin: auto auto;
-	background-image: url(img/scroller_bottom.png) !important;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 100% 100%;
-	opacity: 0.6;
+.divider-menu-top{
+    margin-bottom: 10px;
+}
+
+.divider-menu-bottom{
+    margin-top: 10px;
 }
 
 .scroll-container::-webkit-scrollbar {
@@ -323,7 +321,7 @@ button {
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    color: #f0f0f0;
+    color: #9e9e9e !important;
     user-select: none;
     text-align: center;
     letter-spacing: .5px;
@@ -341,6 +339,7 @@ button {
 .btn:hover {
     background: url('img/buttonv.png');
     background-size: 100% 100%;
+    color: #f0f0f0 !important;
 }
 
 .btn-small {
@@ -364,19 +363,12 @@ button {
     background-size: 90% 100%;
     background-repeat: no-repeat;
     background-position: right;
-    border-radius: 10px;
+    border-radius: 0px;
 }
 
 .btn-small.right-btn {
     margin-right: 5px;
 }
-
-/*.buttons{
-    width: calc(100% - 150px) !important;
-    height:35px;
-    text-align: center;
-    margin: 0 auto;
-}*/
 
 h6 {
     color: #f0f0f0;
@@ -400,17 +392,12 @@ h6 {
     margin-top: auto;
 }
 
-.grey-text.title:hover {
-    color: #f0f0f0;
-}
-
 .grey-text-cust.title {
     color: #9e9e9e;
     text-align: left;
     margin: auto 0 auto;
     padding-left: 30px;
-    font-size: 1.1em;
-    font-weight: 400;
+    font-size: 1em;
 }
 
 .grey-text-count.title {
@@ -418,14 +405,13 @@ h6 {
     text-align: center;
     margin: auto;
     font-size: 1em;
-    font-weight: 400;
 }
 
-.white-text {
-    color: #f0f0f0;
+.grey-text-myhorse.title {
+    color: #9e9e9e;
     text-align: center;
     margin: auto;
-    font-weight: 400;
+    font-size: 1em;
 }
 
 ul:not(.browser-default)>li {
@@ -496,7 +482,7 @@ input[type=number]:active {
     margin: auto  !important;
 }
 
-.col.s12.panel-myhorse.item {
+.panel-myhorse.item {
     width: calc(100% - 60px) !important;
     background-image: url('img/input.png'), url('img/input.png');
     background-position: center center;
@@ -505,7 +491,7 @@ input[type=number]:active {
     margin: auto;
 }
 
-.col.s6.panel-col.item-cust {
+.item-cust {
     display: flex;
     justify-content: left;
     padding: 3px 3px !important;
@@ -515,17 +501,19 @@ input[type=number]:active {
     right: auto;
 }
 
-.col.s6.panel-col.item-myhorse {
+.item-myhorse {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 5px 3px !important;
     width: 50%;
     margin: auto;
+    color: #9e9e9e !important;
     text-align: center;
 }
 
-.col.s6.panel-col.item-myhorse:hover {
+.item-myhorse:hover {
+    color: #f0f0f0 !important;
     background: url('img/buttonv.png');
     background-size: 80% 100%;
     background-repeat: no-repeat;
@@ -533,7 +521,7 @@ input[type=number]:active {
     border-radius: 0px;
 }
 
-.col.s4.panel-col.item-count {
+.item-count {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -552,57 +540,42 @@ input[type=number]:active {
     background-size: 100% 100%;
 }
 
-.action-btn{
-    font-weight: 400;
+#bottom_buttons {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border-radius: 0px;
+    padding: 0px 20px;
+    height: 4vh;
+    background: url('img/input.png');
+    background-position: center;
+    background-size: 95% 100%;
+}
+
+.row.main-bottom-buttons {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.button-select {
+    flex-grow: 1;
+    border-radius: 0px;
+    height: 4vh;
+    border: 0px #fff solid;
+    font-family: 'robotoslab';
+    font-weight: 500;
     letter-spacing: 1.5px;
-    padding: 7px 0px;
-    width: 50%;
-    text-align: center;
+    color: #9e9e9e;
+    background-color: transparent!important;
+}
+
+.button-select:hover {
+    background: url('img/buttonv.png');
+    background-size: 100% 100%;
     color: #f0f0f0;
 }
 
-.action-btn:hover{
-    background: url('img/buttonv.png') !important;
-    background-size: 100% 100% !important;
-}
-
-.action-buttons,
-.rotate-buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: calc(100% - 125px) !important;
-    height:35px;
-    background-image: url('img/input.png');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    margin: auto  !important;
-}
-
-.rotate-btn {
-    display:flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    width: 25%;
-    background-image: url('img/input.png');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-
-.rotate-btn:hover {
-    background: url('img/buttonv.png') !important;
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 0px;
-}
 .rotate-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    margin: auto  !important;
+    margin: auto;
+    padding: 0px 3px;
 }
