--- a/html/style.css
+++ b/html/style.css
@@ -407,13 +407,6 @@ h6 {
     font-size: 1em;
 }
 
-.grey-text-myhorse.title {
-    color: #9e9e9e;
-    text-align: center;
-    margin: auto;
-    font-size: 1em;
-}
-
 ul:not(.browser-default)>li {
     list-style-type: none;
 }
@@ -483,12 +476,40 @@ input[type=number]:active {
 }
 
 .panel-myhorse.item {
+    /*width: calc(100% - 60px) !important;
+    height: 3vh;
+    background: url('img/input.png'), url('img/input.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    margin: auto;*/
     width: calc(100% - 60px) !important;
     background-image: url('img/input.png'), url('img/input.png');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
     margin: auto;
+}
+
+.item-myhorse {
+    /*height: 3vh;*/
+    border: 0px #fff solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 3px !important;
+    width: 50%;
+    margin: auto;
+    color: #9e9e9e;
+    text-align: center;
+}
+
+.item-myhorse:hover {
+    background: url('img/buttonv.png');
+    background-size: 90% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #f0f0f0 !important;
 }
 
 .item-cust {
@@ -499,26 +520,6 @@ input[type=number]:active {
     margin-left: auto;
     left: auto;
     right: auto;
-}
-
-.item-myhorse {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 3px !important;
-    width: 50%;
-    margin: auto;
-    color: #9e9e9e !important;
-    text-align: center;
-}
-
-.item-myhorse:hover {
-    color: #f0f0f0 !important;
-    background: url('img/buttonv.png');
-    background-size: 80% 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-    border-radius: 0px;
 }
 
 .item-count {
@@ -577,5 +578,5 @@ input[type=number]:active {
 
 .rotate-text {
     margin: auto;
-    padding: 0px 3px;
+    padding: 0px 5px;
 }
