--- a/ui/src/assets/css/style.css
+++ b/ui/src/assets/css/style.css
@@ -1,16 +1,16 @@
 @font-face {
   font-family: "crock";
-  src: url("fonts/crock.ttf") format("truetype");
+  src: url("../fonts/crock.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "robotoslab";
-  src: url("fonts/robotoslab.ttf") format("truetype");
+  src: url("../fonts/robotoslab.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "HapnaSlabSerif-Medium";
-  src: url("fonts/HapnaSlabSerif-Medium.ttf") format("truetype");
+  src: url("../fonts/HapnaSlabSerif-Medium.ttf") format("truetype");
 }
 
 h6 {
